include extensive Makefile from project (reverted from commit eee6c0b309cd6145fce429003b314a6ccd9b6abc)

--- a/offline/Makefile_offline
+++ b/offline/Makefile_offline
@@ -26,9 +26,23 @@
 #
 # ==============================================================================
 ##########################################################################
-               
+# jiggle - for netbeans               
+#NCDIR=/usr/local/lib
+#NCMOD=/usr/local/include
+#FC=/usr/local/bin/gfortran
+#CFLAGS=-O0 -x f95-cpp-input -ffree-form -ffree-line-length-0
+#LD=-lnetcdf -lnetcdff
+#LDFLAGS=-L/usr/local/lib -O2
+
 # these are all the files we are compiling
-LSRC = cable_data.F90 cable_diag.F90 cable_common.F90 cable_define_types.F90 cable_iovars.F90 cable_abort.F90 casa_variable.F90 cable_parameters.F90 cable_soilsnow.F90 cable_air.F90 cable_albedo.F90 cable_radiation.F90 cable_roughness.F90 cable_carbon.F90 cable_canopy.F90 cable_cbm.F90 cable_checks.F90 cable_read.F90 cable_initialise.F90 cable_input.F90 cable_write.F90 cable_output.F90 casa_cnp.F90 casa_cable.F90 casa_inout.F90 cable_driver.F90 
+LSRC = cable_data.F90 cable_diag.F90 cable_common.F90 cable_define_types.F90         \
+cable_iovars.F90 cable_abort.F90 casa_variable.F90 cable_parameters.F90              \
+cable_soilsnow.F90 cable_air.F90 cable_albedo.F90 cable_radiation.F90                \
+cable_roughness.F90 cable_carbon.F90 cable_canopy.F90 cable_cbm.F90 cable_checks.F90 \
+cable_read.F90 cable_initialise.F90 cable_input.F90 cable_write.F90 cable_output.F90 \
+casa_cnp.F90 casa_cable.F90 casa_inout.F90 cable_driver.F90 cable_driverdata.F90     \
+cable_DUPlicate_types.F90 cable_duplicate_allocate.F90 cable_allocate.F90            \
+cable_main.F90
 
 # this is the executable we are building
 PROG = cable
@@ -51,15 +65,27 @@ all : $(PROG)
 
 #build PROG (cable executable) by linking all objects
 #$(PROG) : $(OBJS)
-$(PROG) : cable_driver.o 
+$(PROG) : cable_main.o 
 	$(FC) $(LDFLAGS) -o $@ $(OBJS) $(LD) 
 
 
 # dependencies
+cable_main.o: cable_main.F90 cable_driver.o
+
 cable_abort.o: cable_abort.F90 cable_iovars.o cable_define_types.o
 
-cable_data.o: cable_data.F90 
- 
+cable_data.o: cable_data.F90
+        
+cable_DUPlicate_types.o: cable_DUPlicate_types.F90 cable_duplicate_allocate.o
+
+cable_duplicate_allocate.o: cable_duplicate_allocate.F90
+
+cable_buffer_types.o: cable_buffer_types.F90 cable_buffer_allocate.o
+
+cable_buffer_allocate.o: cable_buffer_allocate.F90
+
+cable_allocate.o: cable_allocate.F90
+
 cable_diag.o: cable_diag.F90 cable_common.o 
  
 cable_air.o: cable_air.F90 cable_define_types.o cable_common.o cable_data.o
@@ -74,9 +100,11 @@ cable_cbm.o: cable_cbm.F90 cable_carbon.o cable_soilsnow.o cable_canopy.o cable_
 
 cable_checks.o: cable_checks.F90 cable_radiation.o cable_common.o
 
-cable_driver.o: cable_driver.F90 cable_output.o cable_iovars.o cable_cbm.o cable_diag.o   casa_variable.o casa_cable.o casa_cnp.o casa_inout.o cable_input.o cable_common.o cable_data.o
+cable_driverdata.o: cable_driverdata.F90 cable_define_types.o cable_iovars.o cable_common.o cable_data.o  cable_input.o  cable_output.o cable_cbm.o cable_diag.o casa_variable.o casa_cable.o casa_cnp.o casa_inout.o 
+        
+cable_driver.o: cable_driver.F90 cable_driverdata.o cable_output.o cable_iovars.o cable_cbm.o cable_diag.o   casa_variable.o casa_cable.o casa_cnp.o casa_inout.o cable_input.o cable_common.o cable_data.o cable_DUPlicate_types.o cable_buffer_types.o cable_buffer_allocate.o
 
-cable_define_types.o: cable_define_types.F90
+cable_define_types.o: cable_define_types.F90 cable_allocate.o
 
 cable_iovars.o: cable_iovars.F90 cable_define_types.o 
 
@@ -104,7 +132,7 @@ casa_cable.o: casa_cable.F90 cable_define_types.o  cable_carbon.o casa_variable.
 
 casa_cnp.o: casa_cnp.F90 cable_define_types.o  casa_variable.o 
 
-casa_inout.o: casa_inout.F90 cable_define_types.o  cable_iovars.o casa_variable.o casa_cnp.o
+casa_inout.o: casa_inout.F90 cable_define_types.o  cable_iovars.o casa_variable.o casa_cnp.o cable_common.o
 
 cable_common.o: cable_common.F90  cable_iovars.o
 
